# rocket3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
rocket3/: __init__.py
tests/: __init__.py  __init__.py~  test_http.py  test_https.py  test_rocket.py  test_rocket.py~
tests/data/: localhost.crt  localhost.key
